// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should allow for conditional rendering of items 1`] = `
<Dropdown
  button={
    <ForwardRef
      context="brand"
    >
      Click me!
    </ForwardRef>
  }
  onChange={[MockFunction]}
  placement="top-start"
>
  <Button
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-labelledby="downshift-45-label downshift-45-toggle-button"
    context="brand"
    id="downshift-45-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={true}
      aria-haspopup="listbox"
      aria-labelledby="downshift-45-label downshift-45-toggle-button"
      className="Button Button--context_brand"
      disabled={false}
      id="downshift-45-toggle-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      Click me!
    </button>
  </Button>
  <List
    aria-labelledby="downshift-45-label"
    className="Dropdown__list"
    id="downshift-45-menu"
    isControlledNavigation={true}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    tabIndex={-1}
  >
    <ul
      aria-labelledby="downshift-45-label"
      className="List Dropdown__list"
      id="downshift-45-menu"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
      tabIndex={-1}
    >
      <ListItem
        aria-selected="false"
        className="List__item"
        id="downshift-45-item-0"
        isHighlighted={false}
        key=".$.$key-2"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        value="testValue"
      >
        <li
          aria-selected="false"
          className="ListItem ListItem--clickable List__item"
          id="downshift-45-item-0"
          onClick={[Function]}
          onMouseMove={[Function]}
          role="presentation"
        >
          <Text
            inline={true}
            key=".0"
          >
            <span>
              With value
            </span>
          </Text>
        </li>
      </ListItem>
    </ul>
  </List>
</Dropdown>
`;

exports[`Dropdown should downshift only by enabled items with value 1`] = `
<Dropdown
  button={
    <ForwardRef
      context="brand"
    >
      Click me!
    </ForwardRef>
  }
  onChange={[MockFunction]}
  placement="top-start"
>
  <Button
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label downshift-3-toggle-button"
    context="brand"
    id="downshift-3-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={true}
      aria-haspopup="listbox"
      aria-labelledby="downshift-3-label downshift-3-toggle-button"
      className="Button Button--context_brand"
      disabled={false}
      id="downshift-3-toggle-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      Click me!
    </button>
  </Button>
  <List
    aria-labelledby="downshift-3-label"
    className="Dropdown__list"
    id="downshift-3-menu"
    isControlledNavigation={true}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    tabIndex={-1}
  >
    <ul
      aria-labelledby="downshift-3-label"
      className="List Dropdown__list"
      id="downshift-3-menu"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
      tabIndex={-1}
    >
      <ListItem
        className="List__item"
        disabled={true}
        key=".$.$key-1"
      >
        <li
          className="ListItem ListItem--disabled List__item"
          role="presentation"
        >
          <Text
            inline={true}
            key=".0"
          >
            <span>
              Disabled
            </span>
          </Text>
        </li>
      </ListItem>
      <ListItem
        aria-selected="false"
        className="List__item"
        id="downshift-3-item-0"
        isHighlighted={false}
        key=".$.$key-2"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        value="1"
      >
        <li
          aria-selected="false"
          className="ListItem ListItem--clickable List__item"
          id="downshift-3-item-0"
          onClick={[Function]}
          onMouseMove={[Function]}
          role="presentation"
        >
          <Text
            inline={true}
            key=".0"
          >
            <span>
              With value 1
            </span>
          </Text>
        </li>
      </ListItem>
      <ListItem
        className="List__item"
        key=".$.$key-3"
      >
        <li
          className="ListItem List__item"
          role="presentation"
        >
          <Text
            inline={true}
            key=".0"
          >
            <span>
              Without value
            </span>
          </Text>
        </li>
      </ListItem>
      <div
        className="List__item customDiv"
        key=".$.$key-4"
      >
        Div
      </div>
      <ListItem
        aria-selected="false"
        className="List__item"
        id="downshift-3-item-1"
        isHighlighted={false}
        key=".$.$key-5"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        value="2"
      >
        <li
          aria-selected="false"
          className="ListItem ListItem--clickable List__item"
          id="downshift-3-item-1"
          onClick={[Function]}
          onMouseMove={[Function]}
          role="presentation"
        >
          <Text
            inline={true}
            key=".0"
          >
            <span>
              With value 2
            </span>
          </Text>
        </li>
      </ListItem>
    </ul>
  </List>
</Dropdown>
`;

exports[`Dropdown should render correctly closed 1`] = `
Array [
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label downshift-0-toggle-button"
    className="Button Button--context_brand"
    disabled={false}
    id="downshift-0-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Click me!
  </button>,
  <ul
    aria-labelledby="downshift-0-label"
    className="List"
    id="downshift-0-menu"
    onBlur={[Function]}
    onFocus={[MockFunction]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    role="listbox"
    tabIndex={-1}
  />,
]
`;

exports[`Dropdown should render correctly opened 1`] = `
Array [
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label downshift-1-toggle-button"
    className="Button Button--context_brand"
    disabled={false}
    id="downshift-1-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Click me!
  </button>,
  <ul
    aria-labelledby="downshift-1-label"
    className="List"
    id="downshift-1-menu"
    onBlur={[Function]}
    onFocus={[MockFunction]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    role="listbox"
    tabIndex={-1}
  />,
]
`;

exports[`Dropdown should render correctly with mixed children: array and single ListItem 1`] = `
<Dropdown
  button={
    <ForwardRef
      context="brand"
    >
      Click me!
    </ForwardRef>
  }
  onChange={[MockFunction]}
  placement="top-start"
>
  <Button
    aria-expanded={true}
    aria-haspopup="listbox"
    aria-labelledby="downshift-28-label downshift-28-toggle-button"
    context="brand"
    id="downshift-28-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={true}
      aria-haspopup="listbox"
      aria-labelledby="downshift-28-label downshift-28-toggle-button"
      className="Button Button--context_brand"
      disabled={false}
      id="downshift-28-toggle-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      Click me!
    </button>
  </Button>
  <List
    aria-labelledby="downshift-28-label"
    className="Dropdown__list"
    id="downshift-28-menu"
    isControlledNavigation={true}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    tabIndex={-1}
  >
    <ul
      aria-labelledby="downshift-28-label"
      className="List Dropdown__list"
      id="downshift-28-menu"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
      tabIndex={-1}
    >
      <ListItem
        className="List__item"
        disabled={true}
        key=".$.$disabled-key"
      >
        <li
          className="ListItem ListItem--disabled List__item"
          role="presentation"
        >
          <Text
            inline={true}
            key=".0"
          >
            <span>
              Disabled
            </span>
          </Text>
        </li>
      </ListItem>
      <ListItem
        aria-selected="false"
        className="List__item"
        id="downshift-28-item-0"
        isHighlighted={false}
        key=".$.1=2$one"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        value="one"
      >
        <li
          aria-selected="false"
          className="ListItem ListItem--clickable List__item"
          id="downshift-28-item-0"
          onClick={[Function]}
          onMouseMove={[Function]}
          role="presentation"
        >
          <Text
            inline={true}
            key=".0"
          >
            <span>
              one
            </span>
          </Text>
        </li>
      </ListItem>
      <ListItem
        aria-selected="false"
        className="List__item"
        id="downshift-28-item-1"
        isHighlighted={false}
        key=".$.1=2$two"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        value="two"
      >
        <li
          aria-selected="false"
          className="ListItem ListItem--clickable List__item"
          id="downshift-28-item-1"
          onClick={[Function]}
          onMouseMove={[Function]}
          role="presentation"
        >
          <Text
            inline={true}
            key=".0"
          >
            <span>
              two
            </span>
          </Text>
        </li>
      </ListItem>
    </ul>
  </List>
</Dropdown>
`;
